added insights publisher and consumer update flow